--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2."
+excerpt: "<iframe width="560" height="315" src="https://www.youtube.com/embed/NOkr8rmh5nY?si=7RLa3dXdCBiY3kW9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>Short description of portfolio item number 2."
 collection: portfolio
 ---
 
