--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,5 +1,5 @@
 ---
-title: "Portfolio item number 2"
+title: "A Automatic Recognition and Classification system on Surface Defect of the Flange"
 excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'><br/>"
 collection: portfolio
 videolink: "https://www.youtube.com/embed/NOkr8rmh5nY?si=6M9QImRneOpNTqLO"
