--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "A Automatic Recognition and Classification system on Surface Defect of the Flange"
-excerpt: #"Short description of portfolio item number 2 <br/>"
+excerpt: ""
 collection: portfolio
 videolink: "https://www.youtube.com/embed/NOkr8rmh5nY?si=6M9QImRneOpNTqLO"
 ---
