--- a/_portfolio/project_1.html
+++ b/_portfolio/project_1.html
@@ -2,7 +2,7 @@
 title: "A Automatic Recognition and Classification system on Surface Defect of the Flange"
 excerpt: 
 collection: portfolio
-videolink: "https://www.youtube.com/embed/NOkr8rmh5nY?si=6M9QImRneOpNTqLO"
+videolink: "https://www.youtube.com/embed/oV7tYH5dSaM?si=ylt5XCKdGh4w0Kzh"
 ---
 
 The aim of this study is to develop an automatic defect detection system for the flange surface, an operational pipeline with a bionic motion-vision mechatronic system, which mimics manual detection. Three methods are proposed as part of the system. The visual-detection-simulating sensing method, mimicking human defect detection under horizontal light, is proposed to produce images of the defects on multifaceted reflective-metal surfaces. The human-operation simulation method, mimicking human defect detection under different light angles, is designed to optimize the visual perspective angles. The intelligent decision mechanism, mimicking the way human attention is focused, is proposed to solve complex pattern recognition problems. Based on this approach, an automated inspection machine, including posture adjustment, lighting, and imaging, for flange surface quality is developed. An intelligent inspection system with defect recognition algorithms is deployed. The smallest width of surface defects detected is 0.1 mm. The proposed apparatus design paradigm provides a general solution for flaw detection on non-planar, complex surface workpieces.
