--- a/_portfolio/project_1.html
+++ b/_portfolio/project_1.html
@@ -5,4 +5,8 @@ collection: portfolio
 videolink: "https://www.youtube.com/embed/oV7tYH5dSaM?si=ylt5XCKdGh4w0Kzh"
 ---
 
-The aim of this study is to develop an automatic defect detection system for the flange surface, an operational pipeline with a bionic motion-vision mechatronic system, which mimics manual detection. Three methods are proposed as part of the system. The visual-detection-simulating sensing method, mimicking human defect detection under horizontal light, is proposed to produce images of the defects on multifaceted reflective-metal surfaces. The human-operation simulation method, mimicking human defect detection under different light angles, is designed to optimize the visual perspective angles. The intelligent decision mechanism, mimicking the way human attention is focused, is proposed to solve complex pattern recognition problems. Based on this approach, an automated inspection machine, including posture adjustment, lighting, and imaging, for flange surface quality is developed. An intelligent inspection system with defect recognition algorithms is deployed. The smallest width of surface defects detected is 0.1 mm. The proposed apparatus design paradigm provides a general solution for flaw detection on non-planar, complex surface workpieces.
+Contributions of this Research:
+(1) Designing and developing a Halbach cylinder that can generate uniform magnet field density inside.
+(2) Establishing an analytical framwork for the general Halbach-array-based two-phase motor that can produce constant torque
+(3) Proposing a high-precision position sensing method based on Hall-effect sensors
+(4) Designing and implementing a controller to achieve precision position control.
