--- a/_portfolio/project_1.html
+++ b/_portfolio/project_1.html
@@ -7,6 +7,6 @@ videolink: "https://www.youtube.com/embed/oV7tYH5dSaM?si=ylt5XCKdGh4w0Kzh"
 
 Contributions of this Research:
 (1) Designing and developing a Halbach cylinder that can generate uniform magnet field density inside.
-(2) Establishing an analytical framwork for the general Halbach-array-based two-phase motor that can produce constant torque
+(2) Establishing an analytical framework for the general Halbach-array-based two-phase motor that can produce constant torque
 (3) Proposing a high-precision position sensing method based on Hall-effect sensors
 (4) Designing and implementing a controller to achieve precision position control.
