--- a/_portfolio/project_2.html
+++ b/_portfolio/project_2.html
@@ -1,6 +1,6 @@
 ---
 title: "A Automatic Recognition and Classification system on Surface Defect of the Flange"
-excerpt: '<img src='/images/H_motor.png'><br/>'
+excerpt: 
 collection: portfolio
 videolink: "https://www.youtube.com/watch?v=oV7tYH5dSaM"
 ---
