--- a/_portfolio/project_1.html
+++ b/_portfolio/project_1.html
@@ -1,6 +1,6 @@
 ---
 title: "A Automatic Recognition and Classification system on Surface Defect of the Flange"
-excerpt: 
+excerpt: '<img src='/images/H_motor.png'><br/>'
 collection: portfolio
 videolink: "https://www.youtube.com/embed/oV7tYH5dSaM?si=ylt5XCKdGh4w0Kzh"
 ---
