--- a/_portfolio/project_2.html
+++ b/_portfolio/project_2.html
@@ -1,6 +1,6 @@
 ---
 title: "A Automatic Recognition and Classification system on Surface Defect of the Flange"
-excerpt: 
+excerpt: "<img src='https://jet00wy.github.io/YuanWeiWebPage/images/Flange_M.png'><br/>"
 collection: portfolio
 videolink: "https://www.youtube.com/embed/NOkr8rmh5nY?si=6M9QImRneOpNTqLO"
 ---
